# sshfs-gui

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  sshfs_utils.rs
sshfs-gui/: Cargo.toml
sshfs-gui/src/: config.rs  main.rs
sshfs-gui/static/: config.json
sshfs-gui/ui/: appwindow.slint
ui/: appwindow.slint  confirm_dialog.slint
