[package]
name = "sshfs-gui"
version = "0.1.0"
authors = ["Michael Kennedy <michaelkennedyns5@gmail.com>"]
license = "GPL-3"
readme = "README.md"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.2"
serde_json = "1.0"
serde = "1.0.195"
rfd = "0.13.0"
rusqlite = "0.30.0"
egui-toast = "0.11.0"
regex = "1.10.3"

[build-dependencies]
slint-build = "1.0"
